# SistemRobotOtonom_ROS2Coppeliasim

./: CoppeliaScee.ttt  README.md  copel.lua  l.lua  programcoppelia.lua  run.sh
install/: local_setup.sh  setup.sh
install/routine/lib/routine/: routine
install/routine/share/ament_index/resource_index/package_run_dependencies/: routine
install/routine/share/routine/: local_setup.sh  package.bash  package.ps1  package.sh
log/: latest_build  latest_list
src/: copel.lua  programcoppelia.lua
src/install/: local_setup.sh
src/install/routine/share/ament_index/resource_index/parent_prefix_path/: routine
src/install/routine/share/routine/: local_setup.sh  package.dsv  package.xml  package.zsh
src/routine/: CMakeLists.txt  package.xml
src/routine/include/routine/: kinematics.h  motion.h  pid.h
src/routine/msg/: Motion.msg
src/routine/src/: routine.cpp  routine1.cpp  routine2.cpp  routine_.cpp
